--- a/src/components/templates/NavBar/style.css
+++ b/src/components/templates/NavBar/style.css
@@ -1,4 +1,14 @@
 .navbar {
   height: 4rem;
-  background-color: aqua;
+  display: flex;
+  padding: 0 2rem;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: 0px 15px 10px -20px #111;
+}
+
+.nav-title {
+  font-size: 16px;
+  font-weight: 600;
 }
