--- a/src/components/molecules/Button/style.css
+++ b/src/components/molecules/Button/style.css
@@ -7,6 +7,13 @@
   width: max-content;
 }
 
+.btn-primary-wrapper {
+  padding: 0px 20px;
+  border-radius: 5px;
+  box-shadow: 0px 15px 10px -20px #111;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
 .btn-title {
   font-size: 14px;
   margin-left: 10px;
